[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/StartPanel/StartPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=2]

[node name="StartPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -244.0
margin_right = 312.5
margin_bottom = 244.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterCountLabel" type="Label" parent="MenuControl"]
margin_left = 96.143
margin_top = 45.0609
margin_right = 349.143
margin_bottom = 90.0609
text = "Character Count:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MenuControl/CharacterCountLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 60.0
margin_top = 4.5
margin_right = 182.0
margin_bottom = 59.5
min_value = 2.0
max_value = 50.0
value = 2.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinBuyerPriceLabel" type="Label" parent="MenuControl"]
margin_left = 96.143
margin_top = 94.0609
margin_right = 339.143
margin_bottom = 139.061
text = "Min Buyer Price:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MenuControl/MinBuyerPriceLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 70.0
margin_top = 4.5
margin_right = 192.0
margin_bottom = 59.5
align = 2

[node name="Label" type="Label" parent="MenuControl/MinBuyerPriceLabel"]
margin_left = 448.357
margin_top = 2.0
margin_right = 488.357
margin_bottom = 47.0
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxBuyerPriceLabel" type="Label" parent="MenuControl"]
margin_left = 96.143
margin_top = 142.061
margin_right = 346.143
margin_bottom = 187.061
text = "Max Buyer Price:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MenuControl/MaxBuyerPriceLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 63.0
margin_top = 5.167
margin_right = 185.0
margin_bottom = 60.167
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuControl/MaxBuyerPriceLabel"]
margin_left = 448.357
margin_top = 2.0
margin_right = 488.357
margin_bottom = 47.0
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinSellerPriceLabel" type="Label" parent="MenuControl"]
margin_left = 96.5
margin_top = 190.0
margin_right = 334.5
margin_bottom = 235.0
text = "Min Seller Price:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MenuControl/MinSellerPriceLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 75.0
margin_top = 4.5
margin_right = 197.0
margin_bottom = 59.5
align = 2

[node name="Label" type="Label" parent="MenuControl/MinSellerPriceLabel"]
margin_left = 448.357
margin_top = 2.0
margin_right = 488.357
margin_bottom = 47.0
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxSellerPriceLabel" type="Label" parent="MenuControl"]
margin_left = 96.5
margin_top = 239.0
margin_right = 341.5
margin_bottom = 284.0
text = "Max Seller Price:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="MenuControl/MaxSellerPriceLabel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 68.0
margin_top = 4.5
margin_right = 190.0
margin_bottom = 59.5
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuControl/MaxSellerPriceLabel"]
margin_left = 448.357
margin_top = 2.0
margin_right = 488.357
margin_bottom = 47.0
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyerSellerRatioLabel" type="Label" parent="MenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_top = 300.0
margin_right = 153.0
margin_bottom = 345.0
text = "Buyer / Seller Ratio:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="MenuControl/BuyerSellerRatioLabel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 26.0
value = 50.0

[node name="WarningLabel" type="Label" parent="MenuControl"]
visible = false
margin_left = 58.0
margin_top = 304.0
margin_right = 356.0
margin_bottom = 332.0
custom_colors/font_color = Color( 1, 0.0196078, 0.133333, 1 )
text = "Warning: Values must be 0 - 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -88.0
margin_right = 53.0
margin_bottom = -37.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
